[workspace]
members = ["contracts/*", "packages/*"]

[profile.release.package.cw-osmo-proto]
codegen-units = 1
incremental = false

[profile.release.package.cw20-ics20-2]
codegen-units = 1
incremental = false

[profile.release.package.cw-ics20-swap]
codegen-units = 1
incremental = false

[profile.release.package.cw-ibc-query]
codegen-units = 1
incremental = false

[profile.release.package.cw-osmo-lockup]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
