[package]
name = "cw-ics20-swap"
version = "0.1.0"
authors = ["Giancarlos Salas <me@giansalex.dev>"]
edition = "2018"
description = "IBC Enabled contracts that sends/receives tokens over ICS20 and execute custom action"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

library = []

[dependencies]
cw-utils = "0.12.1"
cw2 = "0.12.1"
cosmwasm-std = { version = "1.0.0-beta5", features = ["stargate"] }
cw-osmo-proto = { path = "../../packages/osmo-proto", version = "0.1.0" }
cw-storage-plus = "0.12.1"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta5" }
