[package]
name = "cw-gamm-ics20"
version = "0.1.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>", "Giancarlos Salas <me@giansalex.dev>"]
edition = "2018"
description = "IBC Enabled contracts that receives CW20 tokens and sends them over ICS20 to a remote chain"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw-utils = "0.12.1"
cw2 = "0.12.1"
cw20 = "0.12.1"
cosmwasm-std = { version = "1.0.0-beta5", features = ["stargate"] }
cw-storage-plus = "0.12.1"
cw-controllers = "0.12.1"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta5" }
