[package]
name = "cw-osmo-lockup"
version = "0.1.0"
authors = ["Giancarlos Salas <me@giansalex.dev>"]
edition = "2018"
description = "Osmosis lockup account"
repository = "https://github.com/disperze/cw-osmo"
license = "MIT"
keywords = ["osmosis", "cosmwasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw-utils = "0.13.4"
cw2 = "0.13.4"
cosmwasm-std = { version = "1.0.0", features = ["stargate"] }
cw-osmo-proto = { path = "../../packages/osmo-proto", version = "0.1.0" }
cw-storage-plus = "0.13.4"
cw-controllers = "0.13.4"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
